2005-04-07  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-win32-font.c: Fix various compilation errors.

2005-04-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-png.c (PNG_SIG_SIZE): Use a preprocessor macro to get
	a literal value in the array size declaration, (for better
	portability to lame compilers that can't deal with a const int
	variable for the array size). Reported by Oleg Smolsky.
	(PNG_SIG_SIZE): Fix typo.

2005-04-07  Carl Worth  <cworth@cworth.org>

	* configure.in:
	* src/cairo-wideint.h:
	* src/cairoint.h: Use configure-time checks for stdint.h
	vs. inttypes.h vs. sys/int_types.h rather than ad-hoc
	system-specific macros. Also define these types manually none of
	these header are available. (Thanks to Jason Dorje Short
	<jdorje@users.sf.net>).

2005-04-07  Carl Worth  <cworth@cworth.org>

	* test/imagediff.c (main): Fix to return non-zero status on error.

2005-04-06  Owen Taylor  <otaylor@redhat.com>

	* src/cairo.h src/cairo-gstate.c src/cairo-font.c: Add
	a cairo_font_face_t type to hold a description of a font
	face. Replace cairo_set_font() with cairo_set_font_face().

	* src/cairoint.h src/cairo-font.c src/cairo-gstate.c: Add 
	"cairo_simple_font_face" for family/weight/slant and use
	it to implement font naming for the toy API.

	* src/cairo-ft.h src/cairo-ft-font.c cairo-win32.h
	cairo-win32-font.c: Switch the FreeType and Win32 backends
	over to using cairo_font_face_t.

	* src/cairo.h src/cairo-font.c src/cairo-ft-font.c 
	src/cairo-win32-font.c: Pass in font matrix and CTM separately
	rather than as a composite scale when creating fonts; allows
	removing font_matrix argument to metrics functions.

	* src/cairoint.h src/cairo-font.c src/cairo-ft-font.c 
	src/cairo-win32-font.c: Remove cairo_font_scale_t type,
	just use cairo_matrix_t and ignore translations.

	* src/cairo-ft.h src/cairo-ft-font.c: Remove 
	cairo_ft_font_get_pattern() -- it can't work for all FreeType
	backend fonts and doesn't seem particularly useful.
