@@ -52,6 +52,10 @@
 #include <assert.h>
 #include <stdlib.h>
 #include <string.h>
+
+#ifdef _MSC_VER
+#define _USE_MATH_DEFINES
+#endif
 #include <math.h>
 #include <limits.h>
 #include <stdio.h>
